removes punctuation from string, prevents about overlapping close button, adds conditional rendering of buttons

--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ textarea {
     border-radius: 10px;
     height: fit-content;
     font-size: 1.25rem;
-    margin: 10px 0;
-    min-height: 200px;
+    margin: 5px 0;
+    min-height: 180px;
     width: 90%;
     width: 90vw;
 }
@@ -134,7 +134,11 @@ textarea {
 }
 
 .invis {
-    animation: fadeOut 1s;
+    animation: fadeOut 1s forwards;
+}
+
+.hidden {
+    visibility: hidden;
 }
 
 /* footer section */
@@ -147,6 +151,7 @@ footer {
     height: 5%;
     justify-content: left;
     width: 100%;
+    z-index: +10;
 }
 
 footer > p {
